<resources>
    <string name="app_name">Eth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="market">市场</string>
    <string name="bibi">币币</string>
    <string name="otc">OTC</string>
    <string name="more">更多</string>
    <string name="login">登录</string>
</resources>
