<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rgp_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/dp_10">

        <RadioButton
            android:id="@+id/rbt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawablePadding="@dimen/dp_05"
            android:drawableTop="@mipmap/ic_launcher_round"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@drawable/selector_home_text"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/rbt_market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/dp_05"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            android:text="@string/market"
            android:textColor="@drawable/selector_home_text"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/rbt_bibi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/dp_05"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            android:text="@string/bibi"
            android:textColor="@drawable/selector_home_text"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/rbt_otc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/dp_05"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            android:text="@string/otc"
            android:textColor="@drawable/selector_home_text"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/rbt_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/dp_05"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            android:text="@string/more"
            android:textColor="@drawable/selector_home_text"
            android:textSize="@dimen/sp_10" />
    </RadioGroup>

</LinearLayout>